--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ img {
   border-radius: 2px;
 }
 
-/* contacts */
+/* header-contacts */
 .header__group {
   margin-left: auto;
 }
@@ -186,13 +186,13 @@ img {
   transition: fill var(--anim-hover);
 }
 
-.header .link:hover,
-.header .link:focus {
+.header-contacts__link:hover,
+.header-contacts__link:focus {
   color: var(--accent-text-color);
 }
 
-.link:hover .header-contacts-icon,
-.link:focus .header-contacts-icon {
+.header-contacts__link:hover .header-contacts-icon,
+.header-contacts__link:focus .header-contacts-icon {
   fill: var(--accent-background-color);
 }
 
@@ -212,11 +212,11 @@ img {
   background-size: cover;
 }
 
-.hero-container {
+.hero__container {
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.hero-title {
+.hero__title {
   width: 696px;
   margin-right: auto;
   margin-left: auto;
@@ -230,17 +230,47 @@ img {
   color: var(--light-text-color);
 }
 
-.hero-button {
+.btn{
+  width: 200px;
+  min-height: 50px;
+  padding-top: 10px;
+    padding-bottom: 10px;
+  margin-right: auto;
+    margin-left: auto;
+  font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30 / 16);
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: var(--light-text-color);
+    background-color: var(--accent-background-color);
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: none;
+    border-radius: 4px;
+}
+
+.hero__btn {
   display: flex;
+  align-items: center;
+  justify-content: center;  
+}
+
+
+.modal-form-btn {
+  display: block;
+  margin: 0;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  max-height: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-right: 32px;
-  padding-left: 32px;
-  margin-right: auto;
-  margin-left: auto;
-  min-height: 50px;
-  border: 0;
-  font-family: inherit;
+  padding-left: 52px;
+  padding-right: 52px;
+  border: none;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
@@ -248,10 +278,19 @@ img {
   text-align: center;
   color: var(--light-text-color);
   background-color: var(--accent-background-color);
-  cursor: pointer;
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+
+
+
+
+
+
+
+
 
 /* modal window */
 
