--- a/css/styles.css
+++ b/css/styles.css
@@ -643,7 +643,7 @@ img {
 
 /* clients section styles */
 
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -653,13 +653,13 @@ img {
   color: var(--title-text-color);
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   gap: 30px;
   justify-content: center;
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   width: 170px;
   height: 92px;
@@ -671,20 +671,22 @@ img {
   transition: border-color var(--anim-hover);
 }
 
-.clients-icon {
+.clients__icon {
   fill: var(--icon-light-color);
   transition: fill var(--anim-hover);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   border-color: var(--accent-background-color);
 }
 
-.clients-link:hover .clients-icon,
-.clients-link:focus .clients-icon {
+.clients__link:hover .clients__icon,
+.clients__link:focus .clients__icon {
   fill: var(--accent-background-color);
 }
+
+
 /* Portfolio page styles */
 
 /* buttons style */
@@ -809,10 +811,7 @@ img {
 
 /* footer styles */
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
+/* footer-adress  */
 
 .footer {
   padding-top: 60px;
@@ -820,8 +819,9 @@ img {
   background-color: var(--dark-fill-color);
 }
 
-.footer-socials-section {
-  margin-left: 70px;
+.footer__container {
+  display: flex;
+  align-items: baseline;
 }
 
 .footer__logo {
@@ -833,33 +833,44 @@ img {
   color: var(--accent-text-color);
 }
 
+
+
+
+
+
 .addres {
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   font-style: normal;
 }
-.addres-text {
+.addres__text {
   color: var(--light-text-color);
   padding-bottom: 9px;
 }
 
-.footer-contacts {
+.footer__link {
   display: block;
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--anim-hover);
 }
 
-.footer-mail {
+.footer__contacts {
   margin-bottom: 9px;
 }
 
-.addres .link:hover,
-.addres .link:focus {
+.footer__link:hover,
+.footer__link:focus {
   color: var(--accent-text-color);
 }
 
-.footer-title {
+/* footer-socials */
+
+.footer-socials {
+  margin-left: 70px;
+}
+
+.footer__title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -869,12 +880,17 @@ img {
   color: var(--light-text-color);
 }
 
-.footer-socials {
+
+
+
+/* footer-socials */
+
+.footer-socials__list {
   display: flex;
   gap: 10px;
 }
 
-.footer-socials-link {
+.footer-socials__link {
   display: flex;
   width: 44px;
   height: 44px;
@@ -883,28 +899,34 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: background-color var(--anim-hover);
-}
+} 
 
-.footer-socials-icon {
+.footer-socials__icon {
   fill: var(--light-fill-color);
 }
 
-.footer-socials-link:hover,
-.footer-socials-link:focus {
+.footer-socials__link:hover,
+.footer-socials__link:focus {
   background-color: var(--accent-background-color);
 }
 
-.footer-form {
-  display: flex;
-  gap: 12px;
-}
+
+
+/* footer-mailing */
+
 
 .footer-mailing {
   margin-left: 95px;
   margin-right: auto;
 }
 
-.footer-form-field {
+.footer__form {
+  display: flex;
+  gap: 12px;
+}
+
+
+.footer-form__field {
   width: 360px;
   min-height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -915,12 +937,14 @@ img {
   color: var(--light-text-color);
 }
 
-.footer-form-field::placeholder {
+.footer-form__field::placeholder {
   font-size: 16px;
   line-height: calc(20 / 16);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
+} 
+
+
 
 .footer-form__btn {
   display: flex;
@@ -928,7 +952,7 @@ img {
   justify-content: center;
 }
 
-.icon-send {
+.footer-form__icon{
   fill: var(--icon-white-color);
   margin-left: 10px;
 }
