--- a/css/styles.css
+++ b/css/styles.css
@@ -728,55 +728,30 @@ img {
 
 /* project-cards style */
 
-.projects {
+.projects-card {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
 }
 
-.projests-title {
-  margin-bottom: 4px;
-  font-size: 18px;
-  line-height: calc(36 / 18);
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-}
-
-.projects-subtitle {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.03em;
-  color: var(--main-text-color);
-}
-.projects-text {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 24px;
-  padding-left: 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-
-.projects-card {
+.projects-card__link {
   display: block;
   text-decoration: none;
   transition: box-shadow var(--anim-hover);
 }
 
-.projects-card:hover,
-.projects-card:focus {
+.projects-card__link:hover,
+.projects-card__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card-description {
+.projects-card__img {
   position: relative;
   overflow: hidden;
 }
 
-.card-overlay {
+.projects-card__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -794,16 +769,46 @@ img {
   transition: transform var(--anim-hover);
 }
 
-.projects__item:hover .card-overlay {
+.projects-card__item:hover .projects-card__overlay {
   transform: translateY(0);
 }
 
-.card-overlay-text {
+
+.projects-card__description {
   font-size: 18px;
   line-height: calc(28 / 18);
   letter-spacing: 0.03em;
   color: var(--light-text-color);
 }
+
+
+.projects-card__text {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+
+.projects-card__title{
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: calc(36 / 18);
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
+}
+
+.projects-card__subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+
 
 /* footer styles */
 
