--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root {
+ /* :root {
   /* fonts */
   --main-font: Roboto, sans-serif;
   --secondary-font: Raleway, sans-serif;
@@ -24,15 +24,10 @@
 
   /* animation */
   --anim-hover: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+ } */
 
-/* base styles */
-.page {
-  font-family: var(--main-font);
-  background-color: var(--main-background-color);
-  color: var(--main-text-color);
-}
 
+/* 
 /* reset */
 h1,
 h2,
@@ -55,6 +50,13 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+}  */
+
+base styles
+.page {
+  font-family: var(--main-font);
+  background-color: var(--main-background-color);
+  color: var(--main-text-color);
 }
 .container {
   width: 1200px;
@@ -112,6 +114,11 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+
+
+
+
 
 /* header styles */
 
@@ -601,7 +608,7 @@ img {
 .team-card__subtitle {
   margin-bottom: 16px;
   font-size: 16px;
-  line-height: 19px;
+  line-height: calc(19 / 16);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
