--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
+
+// utils styles
 @import './utils/variables';
 @import './utils/reset';
+@import './utils/visually-hidden';
+
+// components styles
 @import './components/base-styles';
