--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,14 @@
 
 // components styles
 @import './components/base-styles';
+
+// header-styles
+@import './components/header-styles';
+@import './components/navigation';
+@import './components/header-contacts';
+
+//studio-page-styles
+// hero-styles
+@import './components/hero';
+@import './components/modal-window';
+@import './components/register-form';
