--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,22 @@
 @import './components/header-contacts';
 
 //studio-page-styles
-// hero-styles
 @import './components/hero';
 @import './components/modal-window';
 @import './components/register-form';
+@import './components/feature-section';
+@import './components/doings-section';
+@import './components/team-section';
+@import './components/socials';
+@import './components/clients-section';
+
+// portfolio-page-styles
+@import './components/filters';
+@import './components/projects-card';
+
+
+// footer-styles
+@import './components/footer';
+@import './components/addres';
+@import './components/footer-socials';
+@import './components/footer-form';
