--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
 
-// utils styles
+// utils 
 @import './utils/variables';
 @import './utils/reset';
 @import './utils/visually-hidden';
 
-// components styles
+// components 
 @import './components/base-styles';
 
 // header-styles
