--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -1,43 +1,43 @@
 .header-contacts {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .header-contacts__list {
-    gap: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
+  gap: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
 }
 
 .header-contacts__item {
-    color: var(--main-text-color);
+  color: var(--main-text-color);
 }
 
 .header-contacts__link {
-    display: flex;
-    align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    transition: color var(--anim-hover);
-}
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition: color var(--anim-hover);
 
-.header-contacts__link:hover,
-.header-contacts__link:focus {
+  &:hover,
+  &:focus {
     color: var(--accent-text-color);
+  }
 }
 
 .header-contacts__icon {
-    margin-right: 10px;
-    fill: var(--icon-grey-color);
-    transition: fill var(--anim-hover);
-}
+  margin-right: 10px;
+  fill: var(--icon-grey-color);
+  transition: fill var(--anim-hover);
 
-.header-contacts__link:hover .header-contacts__icon,
-.header-contacts__link:focus .header-contacts__icon {
+  .header-contacts__link:hover &,
+  .header-contacts__link:focus & {
     fill: var(--accent-background-color);
+  }
 }
