--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,33 +1,37 @@
 .nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
 }
 
 .nav__link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-    transition: color var(--anim-hover);
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color var(--anim-hover);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-text-color);
+  }
 }
 
 .nav__link--current {
-    color: var(--accent-text-color);
-    position: relative;
-}
+  color: var(--accent-text-color);
+  position: relative;
 
-.nav__link--current::after {
+  &::after {
     content: "";
     position: absolute;
     display: block;
@@ -37,9 +41,5 @@
     bottom: 0;
     background-color: var(--accent-background-color);
     border-radius: 2px;
-}
-
-.nav__link:hover,
-.nav__link:hover {
-    color: var(--accent-text-color);
+  }
 }
