--- a/sass/components/_feature-section.scss
+++ b/sass/components/_feature-section.scss
@@ -1,3 +1,10 @@
+.feature {
+    @extend %container;
+    @extend %section;
+    
+}
+
+
 .feature__list {
     display: flex;
     justify-content: center;
