--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    
     max-width: 1600px;
     margin-right: auto;
     margin-left: auto;
@@ -11,6 +12,7 @@
 }
 
 .hero__container {
+    @extend %container;
     padding-top: 200px;
     padding-bottom: 200px;
 }
